fix sidebar menu blurring

--- a/src/components/sidebar/sidebar.sass
+++ b/src/components/sidebar/sidebar.sass
@@ -238,7 +238,7 @@ aside.app-sidebar
       min-width: 300px
       height: 0
       transition: all 0.3s ease
-      transform: translate(-30px, -50%)
+      transform: translate(-40px, 0)
 
       & > .dropdown-background
         @include absolute($top: 0, $left: 0)
